--- a/CSS/02. CSS-Presentation/CSS/homework.css
+++ b/CSS/02. CSS-Presentation/CSS/homework.css
@@ -308,11 +308,11 @@ body aside>ul>li ul {
 
 body aside>ul>li ul li {
     margin-top: 5px;
-    margin-left: -10px;
+    margin-left: 10px;
     margin-bottom: 0px;
     margin-right: 0px;
+    background: url(images/li-dot.png) no-repeat;
     background-position: 0 50%;
-    padding-left: 15px;
 }
 
 body aside>ul>li ul li:before {
