--- a/CSS/4. CSS Layout/CSS/2. Music Categories.css
+++ b/CSS/4. CSS Layout/CSS/2. Music Categories.css
@@ -27,19 +27,52 @@ span {
     position: relative;
     background-color: white;
     display: flex;
-    align-items: flex-start;
-    justify-content: space-between;
+    flex-wrap: wrap;
+    justify-content: space-around;
 }
 
 .text {
     overflow: hidden;
     font-size: 13px;
-    width: 58%;
-    height: 50%;
+    width: 100%;
+    height: 65%;
+}
+
+.button {
+    display: flex;
     border: 1px solid black;
+    align-items: flex-end;
+    justify-content: flex-end;
+    height: 35%
 }
 
 img {
+    width: 100%;
+    height: 100%;
+}
+
+.but-text {
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    height: 92%;
+}
+
+input {
+    background: url('./../images/Red2.png');
+    width: 35%;
+    height: 90%;
+    font-size: 12px;
+    color: white;
+    text-align: center;
+}
+
+#listen {
+    width: 200px;
+    ;
+}
+
+.img {
     width: 37%;
     height: 92%;
 }
